# ThermoKP

./: .gitattributes  .gitignore  .gitmodules  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml  thermokp.py  train.py  train_baseline_nn.py
dashboard/: app.py  inference_helpers.py  log_capture.py  structure_view.py
data/: destereo_fallback_used.txt  enzyme_targets.json  failed_benchmark.txt  failed_chemicals.txt  failed_sequences.txt  failed_structures.txt  failed_tensors.txt  thermokp_database.db
data/results/: clean_summary.txt  eval.json  raw_brenda.txt  raw_sabio.txt  raw_summary.txt  tensors_summary.txt  validator_summary.txt
images/generators/: _style.py  dataset_composition.py  nn_architecture.py  pipeline_overview.py  results_summary.py  tensor_shape.py
models/: best_baseline_model.pth  best_model.pth  final_baseline_model.pth  final_model.pth
src/data/models/: dataset.py  models.py
src/data/parsers/: brenda_parser.py  parser_common.py  raw_summary.py  sabio_rk_parser.py
src/data/processors/: clean_records.py  dataset_validator.py  generate_tensors.py  geometry_processor.py  pretrained_embeddings.py
src/data/scripts/: run_parsers.sh  run_processors.sh
src/data/utils/: fetch_ec_numbers.py  ligand_cleaner.py  smiles_cache.py  sync_brenda_ligand_names.py
src/encoders/: multimodal_encoder.py
src/evaluation/: evaluate_dataset.py  export_benchmark_csv.py
src/physics/: loss.py  thermodynamics.py
src/training/: pinn_training.py
